fix(pipeline/executionStatus): "details" link hidden by scrollbar. (#6850)
If the div showing execution status is too long on the X axis, the scrollbar will appear. That scrollbar, in conjunction with the `overflow-y: hidden` results in the "detail" link being impossible to click on.

--- a/app/scripts/modules/core/src/pipeline/status/executionStatus.less
+++ b/app/scripts/modules/core/src/pipeline/status/executionStatus.less
@@ -1,7 +1,7 @@
 .execution-status-section {
   display: inline-block;
   width: 180px;
-  overflow-y: hidden;
+  overflow: hidden;
   font-size: 0.8em;
   line-height: 12px;
   .status {
